bin/tests/snapshots/attribute_ordering__0b9f0573e9f9877f1b057fd38d1aa17c_fix.snap
---
source: bin/tests/attribute_ordering.rs
assertion_line: 7
---
{
  apple = true;
  Banana = true;
  DOMAIN = true;
  _module = true;
}
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,6 +1,6 @@
 {
-  apple = true;
   Banana = true;
   DOMAIN = true;
   _module = true;
+  apple = true;
 }
