bin/tests/snapshots/attribute_ordering__0b9f0573e9f9877f1b057fd38d1aa17c_lint_errfmt.snap
---
source: bin/tests/attribute_ordering.rs
assertion_line: 7
---
{
  apple = true;
  Banana = true;
  DOMAIN = true;
  _module = true;
}
---
<temp_file_path>>3:3:W:31:[attribute_ordering] `Banana` is out of alphabetical order
