bin/tests/snapshots/attribute_ordering__0b9f0573e9f9877f1b057fd38d1aa17c_lint_json.snap
---
source: bin/tests/attribute_ordering.rs
assertion_line: 7
---
{
  apple = true;
  Banana = true;
  DOMAIN = true;
  _module = true;
}
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "attribute_ordering",
      "note": "Attributes are not in alphabetical order",
      "code": 31,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 3,
              "column": 3
            },
            "to": {
              "line": 3,
              "column": 17
            }
          },
          "message": "`Banana` is out of alphabetical order",
          "suggestion": null
        }
      ]
    }
  ]
}
