bin/tests/snapshots/attribute_ordering__0b9f0573e9f9877f1b057fd38d1aa17c_lint_stderr.snap
---
source: bin/tests/attribute_ordering.rs
assertion_line: 7
---
{
  apple = true;
  Banana = true;
  DOMAIN = true;
  _module = true;
}
---
[attribute_ordering] Warning: Attributes are not in alphabetical order
   ╭─[ <temp_file_path>:3:3 ]
   │
 3 │   Banana = true;
   │   ───────┬──────  
   │          ╰──────── Banana is out of alphabetical order
───╯
