bin/tests/snapshots/attribute_ordering__1ad7ff75542a32af55fc703d8f8ec77c_lint_errfmt.snap
---
source: bin/tests/attribute_ordering.rs
assertion_line: 7
---
stdenv.mkDerivation rec {
  version = "1.1.1";
  pname = "thing";
  src = fetchurl { url = "v${version}"; };
}
---
<temp_file_path>>3:3:W:31:[attribute_ordering] `pname` is out of alphabetical order
