bin/tests/snapshots/attribute_ordering__1ad7ff75542a32af55fc703d8f8ec77c_lint_json.snap
---
source: bin/tests/attribute_ordering.rs
assertion_line: 7
---
stdenv.mkDerivation rec {
  version = "1.1.1";
  pname = "thing";
  src = fetchurl { url = "v${version}"; };
}
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "attribute_ordering",
      "note": "Attributes are not in alphabetical order",
      "code": 31,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 3,
              "column": 3
            },
            "to": {
              "line": 3,
              "column": 19
            }
          },
          "message": "`pname` is out of alphabetical order",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 21
              },
              "to": {
                "line": 5,
                "column": 2
              }
            },
            "fix": "rec {\n  pname = \"thing\";\n  src = fetchurl { url = \"v${version}\"; };\n  version = \"1.1.1\";\n}"
          }
        }
      ]
    }
  ]
}
