bin/tests/snapshots/attribute_ordering__1ad7ff75542a32af55fc703d8f8ec77c_lint_stderr.snap
---
source: bin/tests/attribute_ordering.rs
assertion_line: 7
---
stdenv.mkDerivation rec {
  version = "1.1.1";
  pname = "thing";
  src = fetchurl { url = "v${version}"; };
}
---
[attribute_ordering] Warning: Attributes are not in alphabetical order
   ╭─[ <temp_file_path>:3:3 ]
   │
 3 │   pname = "thing";
   │   ────────┬───────  
   │           ╰───────── pname is out of alphabetical order
───╯
