bin/tests/snapshots/attribute_ordering__1b8196f94500c1d8a759d890a48a0a60_fix.snap
---
source: bin/tests/attribute_ordering.rs
assertion_line: 7
---
{
  # about zebra
  zebra = true;
  # about apple
  apple = true;
}
---
