bin/tests/snapshots/attribute_ordering__1b8196f94500c1d8a759d890a48a0a60_lint_json.snap
---
source: bin/tests/attribute_ordering.rs
assertion_line: 7
---
{
  # about zebra
  zebra = true;
  # about apple
  apple = true;
}
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "attribute_ordering",
      "note": "Attributes are not in alphabetical order",
      "code": 31,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 5,
              "column": 3
            },
            "to": {
              "line": 5,
              "column": 16
            }
          },
          "message": "`apple` is out of alphabetical order",
          "suggestion": null
        }
      ]
    }
  ]
}
