bin/tests/snapshots/attribute_ordering__1b8196f94500c1d8a759d890a48a0a60_lint_stderr.snap
---
source: bin/tests/attribute_ordering.rs
assertion_line: 7
---
{
  # about zebra
  zebra = true;
  # about apple
  apple = true;
}
---
[attribute_ordering] Warning: Attributes are not in alphabetical order
   ╭─[ <temp_file_path>:5:3 ]
   │
 5 │   apple = true;
   │   ──────┬──────  
   │         ╰──────── apple is out of alphabetical order
───╯
